@@ -5,7 +5,6 @@ plugins {
 
 test {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 }
 
 
@@ -13,18 +12,10 @@ dependencies {
     implementation "com.esotericsoftware:kryonet:2.22.0-RC1"
     implementation project(":DonjinKrawler-Server")
     implementation project(":DonjinKrawler-Common")
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.0")
     testImplementation("org.mockito:mockito-core:2.+")
 }
 
 mainClassName = 'donjinkrawler.Client'
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs.add("--enable-preview")
-}
